--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
 		"vite": "^7.1.10",
 		"vitest": "^3.2.4",
 		"vitest-browser-svelte": "^1.1.0"
+	},
+	"dependencies": {
+		"vercel": "^48.8.2"
 	}
 }
