--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
 		"vitest-browser-svelte": "^1.1.0"
 	},
 	"dependencies": {
+		"@supabase/supabase-js": "^2.81.0",
+		"openai": "^4.70.2",
 		"vercel": "^48.8.2"
 	}
 }
